fix(css): Horizontal overflow on Chrome

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -128,3 +128,6 @@ a.table-of-contents__link--active {
   display: none !important;
 }
 
+html, body {
+  overflow-x: hidden;
+}
